fixed clipped heading

--- a/using-github-for-design-collaboration/css/main.styl
+++ b/using-github-for-design-collaboration/css/main.styl
@@ -21,7 +21,7 @@ body
     position relative
     margin 0 auto
     padding 0 20px 30px 20px
-@media screen and (min-width: 820px)
+@media screen and (min-width: 700px)
   #article
     display block
     max-width calc(40% + 500px)
@@ -49,6 +49,7 @@ body
     font-style italic
     margin-top 0
     margin-bottom 50px
+    padding-top 1px
   h2
     font-size 72px
     line-height 72px
